egg fried rice dan sourdough
buat resep baru yang dimasukan ke dalam index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="Recipes/lasagna.html">Lasagna Recipes</a>
+    <ul>
+      <li><a href="Recipes/lasagna.html">Lasagna Recipes</a></li>
+      <li><a href="Recipes/egg-egg-fried-rice.html">Egg Fried Rice Recipes</a></li>
+      <li><a href="Recipes/Sourdough-Bread.html">Sourdough Bread Recipes</a></li>
+    </ul>
+  
   </body>
 </html>
