--- a/Recipes/lasagna.html
+++ b/Recipes/lasagna.html
@@ -7,12 +7,27 @@
   <body>
     <h1>Lasagna Recipes</h1>
     <br><img src="https://www.allrecipes.com/thmb/MkKfYU4oim55CLp39DDuNMuyThA=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/23600-worlds-best-lasagna-armag-4x3-1-b24f9ad518d74090bf197828492c64a6.jpg" alt="lasagna"> 
+    <h2>Description</h2>
+    <a>This lasagna recipe takes a little work, but it is so satisfying and filling that it's worth it!</a>
+    <h2>Ingredients</h2>
     <ul>
-      <li>Meat</li>
-      <li>Onion</li>
-      <li>Tomato products</li>
-      <li>Sugar</li>
-      <li>Spies and seasonings</li>
+      <li><strong>Meat:</strong> This super meaty lasagna has sweet Italian sausage and lean ground beef.</li>
+      <li><strong>Onion and garlic:</strong> An onion and two cloves of garlic are cooked with the meat to add tons of flavor.</li>
+      <li><strong>Tomato products:</strong> You'll need a can of crushed tomatoes, two cans of tomato sauce, and two cans of tomato paste.</li>
+      <li><strong>Sugar:</strong> Two tablespoons of white sugar add subtle sweetness and enhance the flavor of the sauce.</li>
+      <li><strong>Spices and seasonings:</strong> This lasagna recipe is flavored with fresh parsley, dried basil leaves, salt, Italian seasoning, fennel seeds, and black pepper.</li>
+      <li><strong>Lasagna noodles:</strong> Use store-bought or homemade lasagna noodles.</li>
+      <li><strong>Cheeses:</strong> Parmesan, mozzarella, and ricotta cheese make this lasagna extra decadent.</li>
+      <li><strong>Egg:</strong> An egg helps bind the ricotta so it doesn't ooze out of the lasagna when you cut into it.</li>
     </ul>
+    <h2>Steps</h2>
+    <ol>
+      <li><strong>Cook the meat:</strong> Cook the ground meat in a skillet until browned and crumbly. Add the onion and continue cooking until it's translucent. Stir in the canned tomato products, half of the parsley, garlic, basil, 1.5 teaspoons of salt, oregano, and sugar.</li>
+      <li><strong>Cook the noodles:</strong> Boil the lasagna noodles in lightly salted water until they're al dente.</li>
+      <li><strong>Make the cheese layer:</strong> Mix cottage cheese, Parmesan cheese, eggs, the remaining parsley, the remaining salt, and pepper in a bowl.</li>
+      <li><strong>Assemble the lasagna:</strong> Layer the ingredients according to the recipe (starting with sauce and ending with mozzarella) until the lasagna is assembled.</li>
+      <li><strong>Bake the lasagna:</strong> Cover with foil and bake in the preheated oven for about half an hour. Remove the foil and continue baking until the top is golden brown.</li>
+    </ol>
+
   </body>
 </html>
